--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "illuminate/database": "5.1.*",
-        "illuminate/validation": "5.1.*"
+        "illuminate/validation": "5.1.*",
+        "firebase/php-jwt": "^5.0",
+        "namshi/jose": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
