--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "illuminate/database": "5.1.*",
         "illuminate/validation": "5.1.*",
         "firebase/php-jwt": "^5.0",
-        "namshi/jose": "^7.1"
+        "namshi/jose": "^7.1",
+        "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
