--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "illuminate/validation": "5.1.*",
         "firebase/php-jwt": "^5.0",
         "namshi/jose": "^7.1",
-        "webpatser/laravel-uuid": "^3.0"
+        "webpatser/laravel-uuid": "^3.0",
+        "illuminate/events": "5.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
